# template

./: .bandit.yml  .cursorignore  .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .python-version  .trivyignore  AGENTS.md  CHANGELOG.md  CODEBASE_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_MAP.md  LICENSE  Makefile  NOTICE  PYTHON_PROCEDURES.md  README.md  SECURITY.md  compose.override.yml  compose.yml  docker-compose.test.yml  docker-compose.yml  downloadable.md  idea.example.md  idea.md  init-manifest.json  package.json  pyproject.toml  pyrightconfig.json  run.bat  run.sh  setup.bat  setup.sh  spec.md  (+1 more)
.cursor/: mcp.json
.cursor/commands/: audit.md  initialize.md  queue-next.md  scaffold-module.md  validate.md
.cursor/rules/: apps-api.md  documentation.md  global.md  initialization.md  prompts.md  queue.md  security.md  skills.md  testing.md
.devcontainer/: devcontainer.json
.evidence/docs-map/: find-output.txt  plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  queue_item.md
.github/workflows/: cd.yml  ci.yml  label-sync.yml  security.yml  stale.yml
apps/: __init__.py
apps/api/: AGENTS.md  Dockerfile  __init__.py  alembic.ini  pyproject.toml
apps/mobile/: .gitignore  AGENTS.md  README.md  analysis_options.yaml  pubspec.yaml
apps/web/: AGENTS.md  Dockerfile  Dockerfile.playwright  README.md  package.json
deploy/docker/: README.md
deploy/k8s/: README.md
dev_mcp/: README.md  __init__.py  __main__.py  run.sh  server.py
dev_mcp/queue_ops/: __init__.py  test_queue_ops.py
docs/: DOCS_MAP.md  README.md  glossary.md  open-questions.md  project-state.md
docs/BRAINSTORM/: AGENTS.md  PIPELINE-from-brainstorm-to-queue.md  README.md  TEMPLATE-brainstorm.md  docs-restructuring-plan.md
docs/adr/: 0001-initial-architecture.md  0001-initial-template-architecture.md  0002-devicelab-product-default-overrides.md  0002-flutter-as-mobile-client.md  ADR-001-full-stack-template-vendor.md  README.md  template.md
docs/agents/: README.md  evolving-from-incidents.md  initialization-guide.md  pr-audit-checklist.md  quality-ratcheting.md  reviewing-ai-diffs.md  supervision-guide.md
docs/api/: README.md  endpoints.md  error-codes.md  openapi-baseline.json  versioning.md
docs/architecture/: README.md  ai-rag-chromadb.md  ai-rag.md  api-design.md  async-workers.md  auth-multi-tenancy.md  auth.md  billing.md  bounded-contexts.md  data-layer.md  data-model.md  domain-model.md  error-handling.md  frontend.md  mobile.md  modular-monolith.md  multi-tenancy.md  overview.md  profile-interactions.md  system-context.md
docs/data/: migrations.md  schema.md  seeding.md
docs/development/: README.md  ci.md  coding-standards.md  commands.md  dependency-management.md  docs-generation.md  environment-vars.md  git-workflow.md  init-manifest-schema.md  local-setup.md  module-patterns.md  python-procedures.md  testing-guide.md
docs/getting-started/: README.md  prerequisites.md  quickstart.md
docs/integrations/: README.md  full-stack-fastapi-template.md
docs/operations/: README.md  backups.md  configuration.md  database-operations.md  deployment.md  docker.md  health-checks.md  kubernetes.md  monitoring.md  observability.md  rollback.md  scaling.md
docs/optional-clients/: mobile.md  web.md
docs/procedures/: README.md  add-adr.md  add-make-target.md  add-mcp-tool.md  add-optional-app-profile.md  add-procedure.md  add-prompt-template.md  add-queue-category.md  archive-queue-item.md  ci-failure-triage.md  cloud-deployment-setup.md  code-review.md  create-skill.md  database-migration.md  dependency-upgrade.md  enable-profile.md  extract-service-from-monolith.md  handle-blocked-work.md  handoff.md  implement-change.md  implementation-loop.md  incident-rollback.md  initialize-from-idea.md  initialize-repo.md  manage-profiles.md  microfast-dev-mcp.md  open-pull-request.md  plan-change.md  pre-deploy-checklist.md  queue-decomposition.md  release-preparation.md  scaffold-domain-module.md  security-incident-response.md  start-queue-item.md  template-upgrade.md  update-documentation.md  update-or-create-rule.md  update-or-create-skill.md  validate-change.md  validate-idea-md.md
docs/prompts/: README.md  conventions.md  index.md
docs/quality/: README.md  coverage-policy.md  flake-policy.md  testing-strategy.md
docs/queue/: QUEUE_INSTRUCTIONS.md  QUEUE_SPLIT_TRIGGERS.md  queue-categories.md  (+3 more)
monitoring/: docker-compose.monitoring.yml
prompts/: README.md  debugger.md  dependency_upgrade_agent.md  documentation_updater.md  domain_modeler.md  implementation_agent.md  incident_triage_agent.md  migration_author.md  performance_audit_agent.md  profile_configurator.md  queue_agent_prompt.md  queue_processor.md  queue_worker_executor.md  refactorer.md  release_manager.md  repo_bootstrap_agent.md  repo_initializer.md  reviewer_critic.md  rule_authoring_agent.md  security_review_agent.md  skill_authoring_agent.md  skill_searcher.md  spec_hardening_agent.md  task_planner.md  test_writer.md
queue/: QUEUE_AGENT_PROMPT.md  QUEUE_INSTRUCTIONS.md  QUEUE_SYSTEM_REPLICATION_SPEC.md  queue.csv  queuearchive.csv
queue_ops/: __init__.py  test_queue_ops.py
scripts/: README.md  audit-self.sh  check_docs_map.py  ci-migrate-dry-run.sh  clean.sh  codebase-summary.sh  convert-blueprint-markdown.py  db-reset.sh  dev-mcp.sh  dev.sh  docs-check.sh  docs-generate.sh  docs-index.sh  enrich-docs-from-spec.py  enrich-skills-from-spec.py  fmt-check.sh  fmt.sh  generate-env.sh  health-check.sh  idea-parser.py  idea-to-queue.sh  image-build.sh  image-scan.sh  implementation-plan-ci.sh  init-from-idea.py  init-from-idea.sh  init-repo.sh  inventory-check.sh  inventory_check.py  k8s-render.sh  k8s-validate.sh  lint.sh  migrate.sh  pre_deploy_check.py  preflight.sh  profile-enable.sh  project-health.sh  prompt-list.sh  queue-analyze.sh  queue-archive.sh  (+22 more)
skills/: README.md
spec/: CONTENT_DEPTH_PASS.md  IMPLEMENTATION_PLAN.md  spec.md
(+268 files in other folders)
