# pyproject.toml
# BLUEPRINT: Composer 2 implements from this structure
# PURPOSE: Python project configuration. Defines dependencies, dev dependencies, and tool
#          configs (ruff, mypy, pytest, coverage). Per spec §26.1 item 7.
# SECTIONS:
#   - [project]: name, version, python-requires, dependencies, description
#   - [project.optional-dependencies]: dev, test, lint groups
#   - [build-system]: hatchling or setuptools
#   - [tool.ruff]: lint rules, format settings, per-file ignores
#   - [tool.mypy]: strict type checking settings
#   - [tool.pytest.ini_options]: test paths, markers, asyncio mode, coverage
#   - [tool.coverage.run]: source, omit patterns
#   - [tool.coverage.report]: fail_under (coverage floor)
# DESIGN DECISIONS:
#   - python-requires = ">=3.12" — minimum version enforced
#   - Dependencies use minimum version pins (~= or >=) not exact (== allows patch updates)
#   - Dev, test, lint split into optional groups for lean CI environments
#   - ruff replaces flake8, isort, pydocstyle, pyupgrade — single tool
#   - mypy strict mode: all checks enabled; no unexplained Any
#   - asyncio_mode = "auto": pytest-asyncio auto mode (no @pytest.mark.asyncio needed)

[project]
# name = "{{project-slug}}"  # filled during initialization
# version = "0.1.0"
# description = "{{one-line-pitch}}"  # from idea.md §1
# requires-python = ">=3.12"
#
# dependencies = [
#   "fastapi>=0.111.0",
#   "uvicorn[standard]>=0.30.0",
#   "sqlalchemy[asyncio]>=2.0",
#   "aiosqlite>=0.20.0",  # SQLite async driver
#   "asyncpg>=0.29.0",  # PostgreSQL async driver
#   "alembic>=1.13.0",
#   "pydantic>=2.7.0",
#   "pydantic-settings>=2.3.0",
#   "pydantic[email]>=2.7.0",
#   "python-jose[cryptography]>=3.3.0",  # JWT
#   "passlib[bcrypt]>=1.7.4",  # password hashing
#   "httpx>=0.27.0",  # async HTTP client
#   "structlog>=24.0.0",  # structured logging (optional: use stdlib logging)
# ]

# [project.optional-dependencies]
# dev = [
#   "pytest>=8.2.0",
#   "pytest-asyncio>=0.23.0",
#   "pytest-cov>=5.0.0",
#   "httpx>=0.27.0",
#   "mypy>=1.10.0",
#   "ruff>=0.5.0",
#   "pre-commit>=3.7.0",
#   "detect-secrets>=1.5.0",
# ]
# test = [
#   "pytest>=8.2.0",
#   "pytest-asyncio>=0.23.0",
#   "pytest-cov>=5.0.0",
#   "httpx>=0.27.0",
#   "factory_boy>=3.3.0",  # optional: for test factories
#   "pytest-json-report>=1.5.0",  # optional: for flaky-detector.py
# ]
# lint = [
#   "ruff>=0.5.0",
#   "mypy>=1.10.0",
#   "bandit>=1.7.9",
# ]
# ai = [
#   "chromadb>=0.5.0",
#   "sentence-transformers>=3.0.0",  # or openai>=1.0.0
# ]

# [tool.ruff]
# CONTENT: ruff linting and formatting configuration
# target-version = "py312"
# line-length = 88
# [tool.ruff.lint]
# select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM", "RET", "ERA"]
# ignore = ["S101"]  # allow assert in tests
# per-file-ignores = {"*/tests/*" = ["S101", "S105"], "*/alembic/*" = ["INP001"]}
# [tool.ruff.format]
# quote-style = "double", indent-style = "space", skip-magic-trailing-comma = false

# [tool.mypy]
# CONTENT: mypy type checking configuration (strict mode)
# python_version = "3.12"
# strict = true
# ignore_missing_imports = false
# plugins = ["pydantic.mypy"]
# [mypy.pydantic.mypy]
# init_forbid_extra = true, init_typed = true

# [tool.pytest.ini_options]
# CONTENT: pytest configuration
# testpaths = ["apps/api/tests"]
# asyncio_mode = "auto"
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
# markers = [
#   "unit: Tests with no external dependencies",
#   "integration: Tests requiring real database or services",
#   "smoke: Critical path tests run post-deploy",
#   "slow: Tests taking >5 seconds",
# ]
# addopts = "--cov=apps/api/src --cov-report=xml --cov-report=term-missing -v"

# [tool.coverage.run]
# source = ["apps/api/src", "packages"]
# omit = ["*/alembic/*", "*/__init__.py", "*/test_*.py"]

# [tool.coverage.report]
# fail_under = 80  # floor; increased by coverage-ratchet.py as coverage improves
# exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "pass"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
