# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "Agent-operated template repository (FastAPI modular monolith)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.31.0",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.13.1",
  "pydantic[email]>=2.10.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.28.0",
  "email-validator>=2.3.0",
  "celery[redis]>=5.4.0",
  "fastapi-mcp>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=7.1.0",
  "mypy>=1.13.0",
  "ruff>=0.8.0",
  "pre-commit>=4.0.0",
  "types-passlib",
  "bandit[toml]>=1.9.4",
  "pip-audit>=2.7.0",
  "pyyaml>=6.0.0",
]
ai = [
  "chromadb>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src", "packages/contracts", "packages/tasks"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["apps/api/src", "packages"]
extend-exclude = ["skills", "packages/ai", "apps/api/alembic"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM", "RET"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/**" = ["S101", "S105", "E501"]
"**/alembic/**" = ["INP001", "E501"]
"packages/contracts/errors.py" = ["S105"]
"scripts/idea-parser.py" = ["E501", "T201"]
"scripts/init-from-idea.py" = ["E501", "T201", "S603", "S607"]
"scripts/scaffold-module.py" = ["E501", "T201", "S608"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["."]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "celery.*", "chromadb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apps.api.src.worker"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = ["fastapi_mcp", "fastapi_mcp.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/api/src"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
  "unit: fast tests with no external IO",
  "integration: tests needing database or services",
  "smoke: post-deploy critical paths",
  "slow: tests taking more than a few seconds",
]
addopts = "--cov=apps/api/src --cov=packages --cov-report=term-missing --cov-report=xml -v"

[tool.coverage.run]
source = ["apps/api/src", "packages"]
omit = ["*/alembic/*", "*/__init__.py", "packages/ai/*"]

[tool.coverage.report]
fail_under = 55
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
