# Root pyproject for the full-stack template.
# - Workspace coordinates: backend lives at apps/api (its own pyproject defines deps).
# - This root file keeps repo-wide tooling config (ruff, mypy, pytest, coverage)
#   and supplemental Python packages (packages/*).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "Agent-operated full-stack template (FastAPI + React + Postgres)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-testmon>=2.2.0",
  "mypy>=1.8.0",
  "ruff>=0.2.2",
  "pre-commit>=4.6.0",
  "bandit[toml]>=1.9.4",
  "pip-audit>=2.10.0",
  "pyyaml>=6.0.0",
  "coverage>=7.4.3",
]
ai = [
  "chromadb>=0.5.0",
]

# uv workspace: the real application package is at apps/api (its own pyproject).
[tool.uv.workspace]
members = ["apps/api"]

[tool.hatch.build.targets.wheel]
packages = ["packages/contracts", "packages/tasks", "packages/queue_ops"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["apps/api/app", "packages"]
extend-exclude = ["skills", "packages/ai", "apps/api/app/alembic", "apps/web"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM", "RET"]
ignore = ["S101", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/**" = ["S101", "S105", "E501"]
"**/alembic/**" = ["INP001", "E501"]
"packages/contracts/errors.py" = ["S105"]
"scripts/scaffold-module.py" = ["E501", "T201", "S608"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["pydantic.mypy"]
mypy_path = ["apps/api", "."]
explicit_package_bases = true
namespace_packages = true
exclude = ["apps/api/app/alembic", "apps/web"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "celery.*", "chromadb.*", "emails.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi_mcp", "fastapi_mcp.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["apps/api"]
markers = [
  "unit: fast tests with no external IO",
  "integration: tests needing database or services",
  "smoke: post-deploy critical paths",
  "slow: tests taking more than a few seconds",
]

[tool.coverage.run]
source = ["apps/api/app", "packages"]
omit = ["*/alembic/*", "*/__init__.py", "packages/ai/*"]

[tool.coverage.report]
fail_under = 0
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
